testsuite/tests/rename/should_fail/T15539.stderr

T15539.hs:6:13: error:
    • Variable not in scope: baz
    • Perhaps you meant one of these: ‘bar’ (line 15), ‘bam’ (line 17)
